# cervellaswarm

./: .coverage  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDICE.md  LICENSE  NORD.md  NOTICE  PROMPT_RIPRESA.md  PROMPT_SWARM_MODE.md  README.md  RESEARCH_LABIA_DA_MOEDA_20260127.md  ROADMAP.md  ROADMAP_BEEHIVE.md  ROADMAP_SACRA.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: file_limits_guard.py  memory_flush_auto.py.DISABLED  session_start_swarm.py  subagent_stop.py
.claude/rules/: lingua-universale.md
.github/: CLAUDE.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _build-package.yml  _publish-package.yml  backup-bot-data.yml  ci-agent-hooks.yml  (+33 more)
.sncp/: PROMPT_RIPRESA_MASTER.md  README.md
.swarm/: FASE3_ASYNC_ANALYSIS.md  FASE3_COMPLETE.md  FASE4_ASSESSMENT.md  README.md  REPORT_HARDTEST_20260110.md
cervella/: README.md  pyproject.toml
cervella/agents/: __init__.py  loader.py  runner.py
cervella/api/: __init__.py  client.py
cervella/cervella.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cervella/cli/: __init__.py  __main__.py
cervella/cli/commands/: __init__.py  checkpoint.py  init.py  status.py  task.py
cervella/sncp/: __init__.py  manager.py
cervella/tests/: __init__.py  test_basic.py  test_structure.py
cervella/tier/: tier_manager.py
cervellaswarm-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
dashboard/: start-dashboard.sh
data/: swarm_memory.db
docs/: AGENTS_REFERENCE.md  ANALISI_BUSINESS_MODEL_OPENSOURCE.md  ARCHITECTURE.md  ARCHITECT_PATTERN.md  BOZZA_EMAIL_ANTHROPIC.md  BOZZA_SHOW_HN.md  BOZZA_TWEET_LANCIO.md  BROWSER_ACCESS.md  CAROUSEL_LINKEDIN_CONTENT.md  CFP_MCP_DEV_SUMMIT_2026.md  CONTATTI_ANTHROPIC_MCP_LAUNCH.md  DIAMANTE_MARKETING_INDEX.md  DIAMANTE_MARKETING_PARTE1_ANALISI_COMPETITOR.md  DIAMANTE_MARKETING_PARTE2_BEST_PRACTICES.md  DIAMANTE_MARKETING_PARTE3_STRATEGIA_CERVELLASWARM.md  DIAMANTE_MARKETING_PARTE4_RISORSE_FINALE.md  DNA_FAMIGLIA.md  DUAL_REPO_STRATEGY.md  FAQ.md  FAQ_CERVELLASWARM_v124.md  GETTING_STARTED.md  GIT_ATTRIBUTION.md  GUIDA_STRIPE_LIVE.md  GUIDA_SUBMIT_MCP_DIRECTORY.md  HN_RESPONSE_PLAYBOOK.md  HOOKS.md  IDEE_FUTURE.md  MANUALE_START_SESSION.md  MIGRATION.md  OVERVIEW_FAMIGLIA.md  PATTERN_COMUNICAZIONE.md  PIANO_B_LANCIO.md  REPO_MAPPING.md  RICERCA_NO_CODE_VS_TECH_WRITING.md  RUOLI_CHEAT_SHEET.md  SEMANTIC_SEARCH.md  SHOW_HN_POST_READY.md  SHOW_HN_V2_DRAFT.md  SNCP_GUIDE.md  SNCP_MEMORY_MAP.md  (+2 more)
hooks/: validate_syntax.py
landing/: faq.html  getting-started.html  how-it-works.html  index.html  og-template.html
logs/: swarm_2026-01-03.jsonl
lu-code-review/: .dockerignore  demo_data.py  fly.toml  protocol.lu  runner.py  server.py
lu-debugger/: .dockerignore  demo_data.py  fly.toml  requirements.txt  runner.py  server.py  test_debugger.py
lu-mcp-server/: .gitignore  Dockerfile  README.md  lu_mcp_server.py  pyproject.toml  server.json
lu-mcp-server/tests/: test_smoke.py
moltbook-bot/: .dockerignore  Dockerfile  README.md  bot.py  config.py  fly.toml  responder.py
openclaw-skill-lu/: SKILL.md
playground/: examples.js  incident.html  index.html  tour-ui.js  tour.css  tour.js  zoo.html
plugin/: README.md
poc_cervella_baby/: CHECKLIST_GO_NO_GO.md  GO_NO_GO_FRAMEWORK.md  ISTRUZIONI_WEEK3.md
reports/: ANALISI_FEATURE_W1_W4_VS_USO_INTERNO.md  ANALISI_STRATEGICA_SYNC_ERICSOFT_MIRACOLLO.md  AUDIT_CONTEXT_USAGE_20260120.md  CAUSA_RADICE_CONTEXT_DOPPIO.md  TECH_DEBT_SUMMARY_20260204.md  audit_pms_core_20260119.md  automation_setup_report_20260210.md  code_review_20260105.md  code_review_20260106.md  engineer_analysis_20260202_200442.json  engineer_report_20260103_192710.json  engineer_report_20260103_195149.json  engineer_report_20260103_210235.json  engineer_report_20260103_213054.json  engineer_report_20260103_213225.json  engineer_report_20260103_224100.json  engineer_report_20260103_225153.json  engineer_report_20260104_030448.json  engineer_report_20260104_031227.json  engineer_report_20260104_033141.json  engineer_report_20260104_042452.json  engineer_report_20260104_052651.json  engineer_report_20260104_055637.json  engineer_report_20260104_061643.json  engineer_report_20260104_125414.json  engineer_report_20260105_030111.json  engineer_report_20260105_044053.json  engineer_report_20260105_044127.json  engineer_report_20260105_144438.json  engineer_report_20260105_162204.json  engineer_report_20260105_164655.json  engineer_report_20260105_194229.json  engineer_report_20260106_023925.json  engineer_report_20260106_042444.json  engineer_report_20260106_090321.json  engineer_report_20260106_094524.json  engineer_report_20260106_112644.json  engineer_report_20260106_130902.json  engineer_report_20260106_164515.json  engineer_report_20260106_174409.json  (+428 more)
scripts/: archive_old_reports.sh  check-dependencies.sh  convert_agents_to_agent_hq.py  start-session.sh  update-docs-status.sh.DISABLED  update-roadmap.sh
src/: __init__.py
test-orchestrazione/: README.md
tests/: conftest.py  test_dependency_graph.py  test_integration_w25c.py  test_repo_mapper.py  test_repo_mapper_core.py  test_repo_mapper_integration.py  test_symbol_cache.py  test_symbol_extractor.py  test_symbol_extractor_core.py  test_symbol_extractor_extended.py  test_treesitter_parser.py
(+1913 files in other folders)
