[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cervella"
version = "0.1.0"
description = "Multi-agent orchestration system for Claude Code - 17 specialized AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "CervellaSwarm Contributors", email = "hello@cervellaswarm.com"}
]
keywords = ["ai", "agents", "cli", "development", "automation", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cervella = "cli:main"

[project.urls]
Homepage = "https://cervellaswarm.com"
Repository = "https://github.com/cervellaswarm/cervella"
Documentation = "https://docs.cervellaswarm.com"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

# === PYTEST CONFIGURATION ===
# "Fatto BENE > Fatto VELOCE" - CervellaSwarm
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Coverage options
addopts = [
    "--cov=scripts",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=55",  # S342: coverage 60%, soglia protettiva 55%
    "-v",
]

# Markers per categorizzare test
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# === COVERAGE CONFIGURATION ===
[tool.coverage.run]
source = ["scripts", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/.venv/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
